welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: illegal start of simple expression
      p = = litMessage().toInt
          ^